UI enhacements for adding an agent
